--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="middle" width="1280" height="720" controls>
 
         <video width="320" height="240" controls>
-            <source src="/video/ppap.mp4" type="video/mp4">
+            <source src="./video/ppap.mp4" type="video/mp4">
         </video> 
 
     </div>
